crates/baml-bridge-derive/tests/ui/invalid_syntax.rs
use baml_bridge_derive::BamlType;

#[derive(BamlType)]
#[render(template = "{{ value")]
struct BadTemplate {
    value: String,
}

fn main() {}
